# neural-volume-illumination

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  nodemon.json  pyproject.toml
.zed/: settings.json
data/configs/model_parameters/: best.json  fast.json  gpu.json  gpu_best.json
data/configs/sweeps/: fast_encoding.json  gpu_optimized.json
data/volumes/bonsai/: 1.json  2.json  3.json
data/volumes/chameleon/: 1.json  2.json  3.json  gray.json  white.json
data/volumes/csafe_heptane/: 1.json  2.json  3.json
data/volumes/frog/: 1.json  2.json  3.json
data/volumes/marmoset_neurons/: 1.json  2.json  3.json
evaluation/: evaluate_model.py  evaluate_quality.py  evaluate_utils.py  plot_utils.py  prepare_models.py  prepare_quality_images.py  prepare_radiance.py  results_filter.ipynb  results_high_samples.ipynb  results_model.ipynb  results_online.ipynb  results_performance.ipynb  results_quality.ipynb  results_training.ipynb  serve_files.py
examples/onnx-inference/: main.js
examples/tfjs-mnist/: index.html
examples/webgpu-inference/: canvas_renderer.wgsl  index.html  main.js  radiance_field_network.js  radiance_field_network.wgsl
model/: indirect_radiance.ipynb  onnx_runtime.ipynb  radiance_field_network.ipynb  radiance_field_network.py  server.py  sweep.py  train.py  utils.py  weights_export.ipynb
notebooks/: indirect_radiance.ipynb  radiance_field_network.ipynb  utils.py
web/.zed/: settings.json
web/onnx-inference/: index.html
web/tfjs-mnist/: main.js
web/webgpu-inference/: index.html  main.js  model_utils.js
(+912 files in other folders)
