[project]
name = "neural-volume-illumination"
version = "0.1.0"
description = "Neural caching of dynamic volume illumination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "onnxruntime-gpu>=1.24.3; sys_platform == 'linux'",
    "onnxscript>=0.6.2",
    "opencv-python>=4.13.0.92",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
    "websockets>=16.0",
]
